# bits_and_bytes

./: CMakeLists.txt  README.md  TODO
.github/workflows/: cmake-single-platform.yml
cpp/: Bits.h  BitsPresenter.h  CMakeLists.txt  Common.h  examples.cpp
cpp/test/: Bits.cpp
py/: CMakeLists.txt
